Archive2/b7/978510ed9e5f5f/main.cpp
#include <string>
#include <iostream>
#include <string>
#include <vector>

template<typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec)
{
    for (auto& el : vec)
    {
        os << el << ' ';
    }
    return os;
}

int main()
{
    std::vector<std::string> words = {
        "Hello", "from", "GCC", __VERSION__, "!"
    };
    std::pair<string, string> p({"A", "B"});
    std::cout << p.first << " " << p.second;
    std::cout << words << std::endl;
}
